--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ nav a:hover {
 
 footer {
     text-align: center;
-    background: url(/imagenes/bg.jpg);
+    background: url(imagenes/bg.jpg);
     /*pongo una imagen en mi footer */
     padding: 40px;
 }
