--- a/contacto.css
+++ b/contacto.css
@@ -1,7 +1,3 @@
-.imgheader {
-    display: block;
-    margin: 0 auto;
-}
 
 .imgbody {
     width: 1200px;
@@ -38,14 +34,18 @@ footer {
     margin: 20px;
 }
 
+#banner {
+    width: 100%;
+    display: block;
+}
+
 header {
-    background-color: #BBBBBB;
-    padding: 1px 0;
+    background-color: #97966f;
+    padding: 20px;
 }
 
 nav {
-    background-color: #97966f;
-    padding: 15px;
+    position: relative;
     text-align: center;
 }
 
