--- a/contacto.css
+++ b/contacto.css
@@ -20,11 +20,19 @@ h2 {
 }
 
 footer {
-    margin-top: 100px;
     text-align: center;
     background: url(imagenes/bg.jpg);
     /*pongo una imagen en mi footer */
     padding: 40px;
+    margin-top: auto;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 .copyright {
