--- a/productos.css
+++ b/productos.css
@@ -1,8 +1,3 @@
-#banner {
-    width: 100%;
-    display: block;
-}
-
 .caja {
     width: 940px;
     /* la gran mayoria de las pantallas tienen este tamaño*/
@@ -12,13 +7,11 @@
 }
 
 header {
-    background-color: #BBBBBB;
-    padding: 1px 0;
+    background-color: #97966f;
+    padding: 20px;
 }
 
 nav {
-    padding: 15px;
-    background-color: #97966f;
     position: relative;
     text-align: center;
 }
@@ -44,9 +37,8 @@ nav a:hover {
 }
 
 .productos {
-    width: 940px;
     margin: 0 auto;
-    padding: 50px;
+    padding: 30px;
 }
 
 .productos li {
@@ -63,6 +55,7 @@ nav a:hover {
     /*lo que va a hacer es que no sobre pase el tamaño de la web */
     border: 2px solid #000000;
     border-radius: 10px;
+
 }
 
 .productos li:hover {
@@ -100,10 +93,24 @@ footer {
     background: url(imagenes/bg.jpg);
     /*pongo una imagen en mi footer */
     padding: 40px;
+    margin-top: auto;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 .copyright {
     color: #ffffff;
     font-size: 13px;
     margin: 20px;
+}
+
+#banner {
+    width: 100%;
+    display: block;
 }
