--- a/style.css
+++ b/style.css
@@ -145,12 +145,15 @@ em strong {
 }
 
 .tipo-atencion {
-    display: inline-block;
+ text-align: center;
     vertical-align: top;
-    width: 20%;
-    margin-right: 15%;
+    width: 100%;
+    
 }
 
 .imagenDiferenciales {
-    width: 50%;
+    width: 60%;
+    height: auto;
+    margin: 0 auto;
+    display: block;
 }
