--- a/style.css
+++ b/style.css
@@ -143,24 +143,52 @@ em strong {
 .items {
     font-style: italic;
 }
-
+.items:before{
+    content:"★ ";
+}
 .tipo-atencion {
-    text-align: center;
+    text-align: left;
     vertical-align: top;
     width: 100%;
 
 }
 
-.imagenDiferenciales {
+.contenido-diferenciales {
+    width: 640px;
+    margin: 0 auto;
+}
+
+.lista-diferenciales {
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.items {
+    line-height: 1.5;
+}
+
+.items:first-child {
+    font-weight: bold;
+}
+
+.imagen-diferenciales {
     width: 60%;
     height: auto;
     margin: 0 auto;
-    display: block;
+
 }
 
 /* aqui empieza el css del HOME */
 .banner {
     width: 100%;
+}
+
+.principal {
+    padding: 3em 0;
+    background: #FEFEFE;
+    width: 940px;
+    margin: 0 auto;
 }
 
 .titulo-principal {
@@ -169,6 +197,8 @@ em strong {
     margin: 0 0 1em;
     clear: left;
 }
+
+
 
 .principal {
     padding: 20px;
@@ -194,22 +224,37 @@ em strong {
     margin: 0 20px 20px 0;
 }
 
-.mapa{
+.mapa {
     padding: 3em 0;
-}
-.mapa p{
-    margin:0 0 2em ;
-    text-align: center; 
-}
-.imagenDiferenciales {
-    width: 60%;
+    background: linear-gradient(#FEFEFE, #888888);
+    /* background: linear-gradient(45deg, #FEFEFE, #888888);  de esta forma puedo darle un angulo
+    */
 }
 
-main {
+.mapa p {
+    margin: 0 0 2em;
+    text-align: center;
+}
+
+.mapa-contenido {
     width: 940px;
     margin: 0 auto;
 }
 
+.diferenciales {
+    padding: 3em 0;
+    background: #888888;
+}
+
+.imagenDiferenciales {
+    width: 60%;
+}
+
+
+.video {
+    width: 560px;
+    margin: 1em auto;
+}
 
 /* Responsive Styles */
 @media screen and (max-width: 768px) {
